fix CORS configuration